SR-7011: Fatal Error when Using Calendar.current.dateComponents(_:from:to:)

- _CFCalendarGetComponentDifferenceV() doesn't support a component
  character of 'l' (leap year) as it make no sense for the difference
  between two dates.

- Dont add 'l' to the component string or parse the result into the
  .isLeapMonth property when called from
  NSCalendar.components(_:from:to:options)